# tap-dbt-artifacts

./: .gitignore  .pre-commit-config.yaml  README.md  config.sample.json  pyproject.toml  tap-dbt-artifacts.sh  tox.ini
.github/workflows/: tagged-release.yml  test.yml
tap_dbt_artifacts/: client.py  streams.py  tap.py
tap_dbt_artifacts/schemas/: catalog.schema.json  manifest.schema.json  run-results.schema.json  sources.schema.json
tap_dbt_artifacts/tests/: __init__.py  profiles.yml  test_core.py
