[tool.poetry]
name = "tap-dbt-artifacts"
version = "0.0.1"
description = "`tap-dbt-artifacts` is a Singer tap for dbt artifacts, built with the Meltano SDK for Singer Taps."
authors = ["Prratek Ramchandani"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6"
requests = "^2.25.1"
singer-sdk = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-dbt-artifacts = 'tap_dbt_artifacts.tap:TapDbtArtifacts.cli'
