[tool.poetry]
name = "tap-dbt-artifacts"
version = "0.0.2"
description = "`tap-dbt-artifacts` is a Singer tap for dbt artifacts, built with the Meltano SDK for Singer Taps."
authors = ["Prratek Ramchandani <prratek.95@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = {version = "^21.6b0", allow-prereleases = true}
pre-commit = "^2.13.0"
isort = "^5.9.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-dbt-artifacts = 'tap_dbt_artifacts.tap:TapDbtArtifacts.cli'
